# nomad-os

./: LAYOUT.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
config/: devices.yaml  secrets.env  settings.yaml
src/nomad/: __init__.py  main.py
src/nomad/ai/: __init__.py  brain.py  memory.py  prompts.py
src/nomad/api/: server.py
src/nomad/app/: __init__.py  chat.py  cli.py  server.py  voice.py
src/nomad/core/: __init__.py  config.py  conversation.py  event_bus.py  logger.py  runtime.py  state.py
src/nomad/hardware/: __init__.py  camera.py  gpio.py  mic.py  speakers.py
src/nomad/sensors/: __init__.py  battery.py  gps.py  imu.py
src/nomad/ui/: __init__.py  animations.py  display.py  face.py
src/nomad/voice/: __init__.py  commands.py  speech_to_text.py  text_to_speech.py  wakeword.py
tests/: __init__.py  test_brain.py  test_conversation.py  test_event_bus.py  test_runtime.py  test_voice_cli.py  test_wakeword.py
