[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-os"
version = "0.1.0"
description = "Raspberry Pi robot assistant project."
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0.2",
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sounddevice>=0.4.0",
    "numpy>=1.26.0",
    "openai-whisper>=20240930",
]

[project.scripts]
nomad = "nomad.main:main"

[tool.setuptools.packages.find]
where = ["src"]
